k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-chat-app
          image: sangitamaldode/chatapp-frontend:v1
          ports:
            - containerPort: 80
          # env:
          #   - name: NODE_ENV
          #     value: "production"
